--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,7 @@ django = "==2.2.26"
 cryptography = "*"
 djangorestframework = "*"
 boto3 = "*"
-django-environ = "*"
+django-environ = "==0.4.5"
 django-storages = "*"
 psycopg2 = "*"
 waitress = "*"
